--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,31 @@ code {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
 }
+
+button{
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #FFFFFF;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  font-size: 12pt;
+  color:#FFFFFF;
+  background-color: #000000;
+  text-align:center;
+  transition: all 0.2s;
+  z-index: 101;
+  margin: 20px;
+}
+
+button:hover{
+  color:#000000;
+  background-color:#FFFFFF;
+}
+
+.ui {
+  position: absolute;
+}
